--- a/templates/evening.html
+++ b/templates/evening.html
@@ -4,6 +4,7 @@
 <!-- External Libs -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <!-- Custom CSS (Shared) -->
@@ -356,6 +357,7 @@
     });
 </script>
 {% endblock %}
+
 
 
 
