--- a/templates/evening.html
+++ b/templates/evening.html
@@ -292,17 +292,15 @@
             </div>
 
             <!-- ACTION BUTTONS -->
-             <!-- ACTION BUTTONS -->
-            <div class="d-flex justify-content-center gap-4 mb-5">
-                {% if not last_settle_id %}
-                    <button type="button" onclick="submitForm('draft')" class="btn btn-light border btn-glass text-muted">
-                        <i class="fa-regular fa-floppy-disk me-2"></i> Save Draft
-                    </button>
-                    <button type="button" onclick="submitForm('final')" class="btn btn-glass btn-save">
-                        <i class="fa-solid fa-check-double me-2"></i> Submit Final
-                    </button>
-                {% endif %}
-            </div>
+             <div class="d-flex gap-2 mt-4 mb-5">
+            <button type="button" onclick="saveDraft()" class="btn btn-warning btn-lg rounded-pill shadow-sm fw-bold w-50 text-dark">
+                <i class="fa-regular fa-floppy-disk me-2"></i> SAVE DRAFT
+            </button>
+            
+            <button type="button" onclick="submitFinal()" class="btn btn-dark btn-lg rounded-pill shadow fw-bold w-50">
+                <i class="fa-solid fa-check-double me-2"></i> FINAL SUBMIT
+            </button>
+        </div>
 
         </form>
     </div>
@@ -357,6 +355,7 @@
     });
 </script>
 {% endblock %}
+
 
 
 
